#1 Initial configuration not longer in one line * Added button to configuration screen "Save and synchronize now"

--- a/src/main/resources/org/echocat/adam/messages.properties
+++ b/src/main/resources/org/echocat/adam/messages.properties
@@ -56,7 +56,9 @@ org.echocat.adam.configurationXml.error.empty = Configuration XML cannot be empt
 org.echocat.adam.configurationXml.error.couldNotParsed = Configuration could not be parsed. Got: {0}
 
 org.echocat.adam.validateConfiguration.label = Validate configuration
+org.echocat.adam.saveAndSynchronizationNow.label = Save and synchronize now
 org.echocat.adam.configurationXml.valid=The configuration XML is valid.
 org.echocat.adam.saveSuccessfulMessage=The configuration was successful saved.
+org.echocat.adam.synchronizationTriggerdMessage=The synchronization was started.
 org.echocat.adam.reset.label=Reset
 
