--- a/src/main/resources/org/echocat/adam/messages_de_DE.properties
+++ b/src/main/resources/org/echocat/adam/messages_de_DE.properties
@@ -58,3 +58,5 @@ org.echocat.adam.configurationXml.error.couldNotParsed=Die Konfiguration is fehl
 org.echocat.adam.configurationXml.valid = Das XML der Konfiguration ist in Ordnung.
 org.echocat.adam.saveSuccessfulMessage = Die Konfiguration wurde erfolgreich gespeichert.
 org.echocat.adam.reset.label = Zur\u00FCcksetzen
+org.echocat.adam.saveAndSynchronizationNow.label=Speichen und sofort synchronisieren
+org.echocat.adam.synchronizationTriggerdMessage=Die Synchronisation wurde gestartet.
