#20 Added ability to configure the visible fields in profile marco #25 Improved style of popup

--- a/src/main/resources/org/echocat/adam/messages.properties
+++ b/src/main/resources/org/echocat/adam/messages.properties
@@ -26,12 +26,19 @@ org.echocat.adam.administration.label = Manage Adam
 org.echocat.adam.user-profile.label = User profile
 org.echocat.adam.user-profile.desc = Display the profile of a user.
 org.echocat.adam.user-profile.param.username.label = User
-org.echocat.adam.user-profile.param.username.desc = User to display by this macro.
+org.echocat.adam.user-profile.param.border.label = Border
+org.echocat.adam.user-profile.param.avatar.label = Avatar
+org.echocat.adam.user-profile.param.labels.label = Labels
+org.echocat.adam.user-profile.param.groupLabels.label = Group labels
+org.echocat.adam.user-profile.param.elements.label = Elements
 
 org.echocat.adam.missingUsername = Missing username
 org.echocat.adam.unkownUser = Unknown user: {0}
 org.echocat.adam.illegalFormat = Illegal format.
 
+org.echocat.adam.default = Default
+org.echocat.adam.compact = Compact
+org.echocat.adam.custom = Custom
 org.echocat.adam.general = General
 org.echocat.adam.personal = Personal
 org.echocat.adam.business = Business
