--- a/src/main/resources/org/echocat/adam/messages_de_DE.properties
+++ b/src/main/resources/org/echocat/adam/messages_de_DE.properties
@@ -26,7 +26,9 @@ org.echocat.adam.administration.label = Adam verwalten
 org.echocat.adam.user-profile.label = Benutzer Profil
 org.echocat.adam.user-profile.desc = Zeigt das Profil eines Benutzers an.
 org.echocat.adam.user-profile.param.username.label = Benutzer
-org.echocat.adam.user-profile.param.username.desc = Benutzer welcher durch dieses Marko angezeigt werden soll.
+org.echocat.adam.user-profile.param.elements.label=Elemente
+org.echocat.adam.user-profile.param.border.label = Rahmen
+org.echocat.adam.user-profile.param.avatar.label = Avatar
 
 org.echocat.adam.missingUsername = Benutzername wurde nicht angegeben.
 org.echocat.adam.unkownUser = Unbekannter Benutzer: {0}
@@ -49,6 +51,7 @@ org.echocat.adam.general=Allgemein
 
 org.echocat.adam.profile.ExtendedPeopleDirectoryAction.action.name = Personenverzeichnis
 org.echocat.adam.all = Alle
+org.echocat.adam.compact = Komapkt
 
 org.echocat.adam.configurationXml.label = Konfigurations XML
 org.echocat.adam.configurationXml.desc = Die Konfiguration von echocat Adam wird durch ein XML verwaltet.
@@ -60,3 +63,7 @@ org.echocat.adam.saveSuccessfulMessage = Die Konfiguration wurde erfolgreich ges
 org.echocat.adam.reset.label = Zur\u00FCcksetzen
 org.echocat.adam.saveAndSynchronizationNow.label=Speichen und sofort synchronisieren
 org.echocat.adam.synchronizationTriggerdMessage=Die Synchronisation wurde gestartet.
+org.echocat.adam.custom=Angepasst
+org.echocat.adam.default=Standard
+org.echocat.adam.user-profile.param.groupLabels.label=Gruppen Beschriftungen
+org.echocat.adam.user-profile.param.labels.label=Beschriftungen
