[*] Rename unkownUser to unknownUser, fixing the typo

--- a/src/main/resources/org/echocat/adam/messages.properties
+++ b/src/main/resources/org/echocat/adam/messages.properties
@@ -33,7 +33,7 @@ org.echocat.adam.user-profile.param.groupLabels.label = Group labels
 org.echocat.adam.user-profile.param.elements.label = Elements
 
 org.echocat.adam.missingUsername = Missing username
-org.echocat.adam.unkownUser = Unknown user: {0}
+org.echocat.adam.unknownUser = Unknown user: {0}
 org.echocat.adam.illegalFormat = Illegal format.
 
 org.echocat.adam.default = Default
