--- a/src/main/resources/org/echocat/adam/messages_de_DE.properties
+++ b/src/main/resources/org/echocat/adam/messages_de_DE.properties
@@ -31,7 +31,7 @@ org.echocat.adam.user-profile.param.border.label = Rahmen
 org.echocat.adam.user-profile.param.avatar.label = Avatar
 
 org.echocat.adam.missingUsername = Benutzername wurde nicht angegeben.
-org.echocat.adam.unkownUser = Unbekannter Benutzer: {0}
+org.echocat.adam.unknownUser = Unbekannter Benutzer: {0}
 org.echocat.adam.illegalFormat = Falsches Format.
 
 org.echocat.adam.personal = Pers\u00F6nlich
